[project]
name = "ia-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.4",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
